--- a/test.html
+++ b/test.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
-    <head>
-        <title></title>
-    </head>
+    <head></head>
     <body>
-        <script type="text/javascript" src="fusion.js"></script>
+        <script type="text/javascript" src="src/fusion.js"></script>
+        <script type="text/javascript" src="test/fusion.js"></script>
     </body>
 </html>
